services/kaapana-core/traefik/traefik-chart/templates/ingresses.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: traefik-web-api-ip
  namespace: kube-system
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.middlewares: kube-system-errorpages@kubernetescrd
    kubernetes.io/ingress.global-static-ip-name: "kubernetes-ingress"
spec:
  rules:
  - host:
    http:
      paths:
      - path: /api
        defaultBackend:
          service.name: traefik
          service.port.name: tr-admin
      - path: /health
        defaultBackend:
          service.name: traefik
          service.port.name: tr-admin
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: traefik-ingress
  namespace: kube-system
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.middlewares: kube-system-errorpages@kubernetescrd,kube-system-traefik-redirect@kubernetescrd,kube-system-strip-prefix@kubernetescrd
    kubernetes.io/ingress.global-static-ip-name: "kubernetes-ingress"
spec:
  rules:
  - host: 
    http:
      paths:
      - path: /traefik
        defaultBackend:
          service.name: traefik
          service.port.name: tr-admin
---
